infra/azurerm_network_security_group.tf
resource "azurerm_network_security_group" "vmtf_sg_Team2" {
  name                = "${var.prefix}-sg"
  location            = var.resource_group_location
  resource_group_name =  azurerm_resource_group.Resource-Group-Azure-tf-Team2.name

  security_rule {
    name                       = "HTTP"
    priority                   = 100
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "80"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }

  security_rule {
    name                       = "SSH"
    priority                   = 101
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "22"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }
}
